fix swagger texttask
