# cmd/api/docs/swagger.yaml
@@ -148,6 +148,17 @@ definitions:
       points:
         type: integer
     type: object
+  github_com_STUD-IT-team_bauman-legends-backend_internal_domain_response.GetTextTask:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      points:
+        type: integer
+      title:
+        type: string
+    type: object
   github_com_STUD-IT-team_bauman-legends-backend_internal_domain_response.Member:
     properties:
       email:
@@ -903,7 +914,7 @@ paths:
       tags:
       - task
   /task/text:
-    post:
+    get:
       consumes:
       - application/json
       parameters:
@@ -916,9 +927,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/github_com_STUD-IT-team_bauman-legends-backend_internal_domain_response.GetTextTask'
         "400":
           description: bad request
           schema:
